# AIProject

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/: eda.py  model.py  train.py
tests/: test_dataset.py  test_eda.py  test_model.py  test_training.py
