[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AIProject"
version = "0.1.0"
description = "MLOps project for Fashion-MNIST classification"
readme = "README.md"
authors = [
    {name = "Luca Cobelli", email = "luca.cobelli@studenti.univr.it"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/id856lgj/AIProject"
Repository = "https://github.com/id856lgj/AIProject.git"

[tool.setuptools]
packages = ["src"]